# ed25519-bench

./: .gitignore  .gitmodules  README.md
C/: CMakeLists.txt  FindGBenchmark.cmake  main.cc
C/Ed25519Benchmarks/: CMakeLists.txt
C/Ed25519Benchmarks/src/: CMakeLists.txt
C/Ed25519Benchmarks/src/cryptopp/: CMakeLists.txt  CryptoppBenchmark.cpp
Java/: .factorypath  dependency-reduced-pom.xml  pom.xml
Java/src/main/java/bench/: BouncyCastleBench.java  Ed25519Benchmarks.java  Str4dBench.java
c/: README.md  a.out
ed25519-donna/: Cargo.toml  README.md  bench.c  bench_results  build.rs
ed25519-donna/benches/: ed25519_donna_bench.rs  ed25519_rust_bench.rs
ed25519-donna/src/: donna_ffi.rs  ffi.rs  lib.rs
ed25519-orlp/: Cargo.toml  README.md  build.rs
ed25519-orlp/benches/: ed25519_orlp_bench.rs
ed25519-orlp/src/: lib.rs  orlp_ffi.rs
go/: README.md  go.mod  go.sum  go_ed25519_test.go
java/: .factorypath  .project  README.md  dependency-reduced-pom.xml  massif.out.51640  pom.xml
java/src/main/java/bench/: BouncyCastleBench.java  Ed25519Benchmarks.java  Str4dBench.java
python/: README.md  benchmarks.py  requirements.txt
python/src/benches/: pure25519_bench.py  pyca_bench.py  pynacl_bench.py
rust/: Cargo.toml  README.md
rust-sea/: .gitignore  Cargo.toml  README.md  build.rs
rust-sea/benches/: ed25519_donna_bench.rs  ed25519_fun_bench.rs  ed25519_orlp_bench.rs  ed25519_rust_bench.rs
rust-sea/src/: donna_ffi.rs  lib.rs  orlp_ffi.rs
rust/benches/: ed25519_dalek_bench.rs
rust/src/: lib.rs
visualizations/: README.md  architecture.py  commands.txt  overall.py  requirements.txt  visual.py
visualizations/src/: visualization.py
