[package]
name = "ed25519-donna"
version = "0.1.0"
authors = ["yuzonightly <marvel.1993@outlook.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "ed25519_donna_bench"
harness = false

[[bench]]
name = "ed25519_rust_bench"
harness = false

[dependencies]
libc = "*"
criterion = "*"
ed25519-rust = { path = "../../ed25519-rust" }

[build-dependencies]
pkg-config = "*"
cc = "*"
