[package]
name = "rust-sea"
version = "0.0.0"
authors = ["yuzonightly <yuzonakai@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bench]]
# name = "ed25519_orlp_bench"
# harness = false

[[bench]]
name = "ed25519_donna_bench"
harness = false

# [[bench]]
# name = "ed25519_fun_bench"
# harness = false

[dependencies]
libc = "*"
criterion = "*"
ed25519-fun = { git = "https://github.com/yuzonightly/ed25519" }
itertools = "0.10.0"
hex = "^0.4"


[build-dependencies]
cc = "*"
