[package]
name = "rust"
version = "0.1.0"
authors = ["yuzonightly <yuzonakai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bench]]
# name = "ed25519_fun_bench"
# harness = false

[[bench]]
name = "ed25519_dalek_bench"
harness = false

[dependencies]
criterion = "*"
ed25519-fun = { git = "https://github.com/yuzonightly/ed25519" }
# ed25519-dalek = { version = "*", features = ["u32_backend", "rand"], default-features = false }
ed25519-dalek = { version = "*", features = ["simd_backend", "rand"], default-features = false }
# ed25519-dalek = { version = "*" }
hex = "^0.4"

[dev-dependencies]
rand = "0.7"
